--- a/src/Leaderboard.module.css
+++ b/src/Leaderboard.module.css
@@ -8,7 +8,7 @@
     padding: 10px;
     font-size: 1.25rem;
     font-weight: bold;
-    background-color: #171b21;
+    background-color: #121212;
     color: whitesmoke;
 }
 
