--- a/src/ProfileCard.module.css
+++ b/src/ProfileCard.module.css
@@ -1,155 +1,124 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Signika:wght@300..700&display=swap');
 .profileCard{
     position: fixed;
     display: flex;
     flex-direction: column;
-    width: 20vw;
+    width: 25vw;
     height: 75vh;
-    background-color: #ffffff;
+    background: linear-gradient(to right, #0d0e0f, #202021);
+    /* background-color: #121212; */
     /* border-radius: 10px; */
     border: 2px solid black;
+    text-transform: uppercase;
+    font-family: "Signika", sans-serif;
 }   
-
-.realRank{
-    display: flex;
-    height: 100px;
-    width: 100px;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    background-color: #838383;
+.profileCard h1{
+    font-size: 1.15rem;
+    
 }
 
-.realRank .inner{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80%;
-    width: 80%;
-    border-radius: 50%;
-    background-color: #ffffff;
-}
-
-
-
-.realRank .inner p{
-    font-size: 3rem;
-    font-weight: bold;
-    text-align: center;
-    color: red;
-}
-.profileCard .cardImage{
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    width: 100%;
-    height: 60%;
-    /* background-image: url("pfp.jpg"); */
-    background-size: cover;
-    /* padding: 10px; */
+.profileCard p{
+    font-size: 0.75rem;
+    color: grey;
 }
 .cancel{
     position: absolute;
-    top: 5%;
-    right: 5%;
-    font-size: 1.5rem;
-    cursor: pointer;
-    color: red;
-}
-.profileCard .cardImage img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    /* border-radius: 10px; */
-    /* border-bottom: 2px solid black; */
-}
-.profileCard .cardImage .details{
-    position: absolute;
-    bottom: 5px;
-    /* width: 80%; */
+    top: 0;
+    right: 0;
+    /* display: none; */
     padding: 10px;
+}
+.profileCard .cardImage{
+    width: 100%;
+    height: 40%;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px;
-    background-color:#f2f2f2;
-    border: 1px solid black;
-    color: black;
 }
 
+.profileCard .cardImage img{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
 
 .profileCard .cardContent{
+    height: 60%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 100%;
-    height: 40%;
-    background-image: url("bg.jpg");
-    background-size: cover;
-}
-
-
-.profileCard .cardContent .cardHistory{
-    display: flex;
-    width: 90%;
-    height: 50%;
     justify-content: space-between;
-    background-color: #f2f2f2;
-    padding: 10px;
+
 }
 
-.profileCard .cardContent .cardHistory h1{
-    text-transform: uppercase;
-    color: black;
-    font-size: 1rem;
+.profileCard .cardContent .heading{
+    align-self: center;
+    height: 20%;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    /* padding: 10px; */
+    /* gap: 5px; */
 }
-
-.profileCard .cardContent .cardHistory p{
-    color: black;
-    font-size: 0.75rem;
-    text-transform: uppercase;
+.profileCard .cardContent .hr{
+    /* height: 5%; */
+    align-self: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 90%;
+}
+.profileCard .cardContent .cardHistory{
+    height: 50%;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .profileCard .cardContent .cardHistory .col1,
 .profileCard .cardContent .cardHistory .col2{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    gap: 20px;
-    height: 100%;
+    align-items: center;
+    justify-content: space-between;
+    width: 50%;
+    padding: 20px;
+    text-align: center;
+}
+.profileCard .cardContent .cardHistory .col1{
+    width: 45%;
+}
+.profileCard .cardContent .cardHistory .col2{
+    flex: 1;
 }
 
 .profileCard .cardContent .cardCurrent{
+    height: 20%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
-    width: 90%;
-    height: 30%;
-    gap: 20px;
-    /* border: 1px solid rgb(163, 23, 23); */
-    border-radius: 50px;
-    padding: 10px;
+    background: linear-gradient(to right, #fcc64a,#aa801d);
+    color: black;
+    padding-bottom: 5px;
 }
 
 .profileCard .cardContent .cardCurrent h1{
-    color: black;
-    font-size: 1.5rem;
-    text-transform: uppercase;
-}
-
-.profileCard .cardContent .cardCurrent p{
-    color: black;
     font-size: 1rem;
+
 }
 
 .profileCard .cardContent .cardCurrent .currentRank,
 .profileCard .cardContent .cardCurrent .currentRating{
+    width: 50%;
+    
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    /* justify-content: flex-end; */
     align-items: center;
-    height: 100%;
+    text-align: center  ;
 }
 
+
+.profileCard .cardContent .cardCurrent .currentRank p,
+.profileCard .cardContent .cardCurrent .currentRating p{
+    color: whitesmoke;
+}
